--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,7 @@
         <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AdaptiveUIJetpackCompose"
-            tools:ignore="LockedOrientationActivity">
+            android:theme="@style/Theme.AdaptiveUIJetpackCompose">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
